--- a/src/components/orderForm/orderForm.module.scss
+++ b/src/components/orderForm/orderForm.module.scss
@@ -1,30 +1,31 @@
 .root {
+  margin: 24px;
+  padding: 32px;
+  border-radius: 12px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 32px;
 }
+
 .formInputs {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 16px;
+  gap: 24px;
+
   @media (width < 600px) {
     grid-template-columns: 1fr;
   }
 }
+
 .actions {
   display: flex;
   justify-content: flex-end;
-  column-gap: 24px;
   align-items: center;
+  column-gap: 12px;
   margin-top: 24px;
+
   @media (width < 600px) {
     flex-direction: column-reverse;
-    row-gap: 16px;
-    width: 100%;
-    margin-top: 0px;
-
-    button {
-      width: 100%;
-    }
+    row-gap: 12px;
   }
 }
